--- a/lib/src/Uncertainty/Algorithm/MetaModel/FunctionalChaos/CMakeLists.txt
+++ b/lib/src/Uncertainty/Algorithm/MetaModel/FunctionalChaos/CMakeLists.txt
@@ -12,6 +12,7 @@ ot_add_source_file (FunctionalChaosSobolIndices.cxx)
 ot_add_source_file (FunctionalChaosValidation.cxx)
 ot_add_source_file (ProjectionStrategy.cxx)
 ot_add_source_file (ProjectionStrategyImplementation.cxx)
+ot_add_source_file (OMPExpansion.cxx)
 ot_add_source_file (LeastSquaresExpansion.cxx)
 ot_add_source_file (IntegrationExpansion.cxx)
 ot_add_source_file (LeastSquaresStrategy.cxx)
@@ -26,6 +27,7 @@ ot_add_source_file (PointToFieldFunctionalChaosAlgorithm.cxx)
 ot_install_header_file (IntegrationStrategy.hxx)
 ot_install_header_file (FixedStrategy.hxx)
 ot_install_header_file (ProjectionStrategyImplementation.hxx)
+ot_install_header_file (OMPExpansion.hxx)
 ot_install_header_file (LeastSquaresExpansion.hxx)
 ot_install_header_file (IntegrationExpansion.hxx)
 ot_install_header_file (LeastSquaresStrategy.hxx)
