Doc: Improve all forms of conditioning

--- a/python/src/PosteriorDistribution_doc.i.in
+++ b/python/src/PosteriorDistribution_doc.i.in
@@ -19,15 +19,43 @@ openturns.MetropolisHastings
 
 Notes
 -----
-Its probability density function is defined as:
+
+Let :math:`\inputRV` be a random vector such that :math:`\inputRV|\vect{\Theta}` follows the distribution
+:math:`\mathcal{L}_{\inputRV|\vect{\Theta}}`,
+with :math:`\vect{\Theta}=g(\vect{Y})` and :math:`\vect{Y}` following the prior distribution :math:`\mathcal{L}_{\vect{Y}}`. The function
+:math:`g` is the link function which input dimension
+is the dimension of :math:`\mathcal{L}_{\vect{Y}}` and which output dimension the dimension of :math:`\vect{\Theta}`.
+
+This class implements the posterior distribution of :math:`\vect{Y}` given that we have a sample :math:`(\vect{s}_1, \dots, \vect{s}_\sampleSize)` of
+:math:`\vect{X}`.
+
+This class requires the following features:
+
+- the :math:`\inputRV` may be continuous, discrete or neither: e.g., it can be a
+  :class:`~openturns.Mixture` of discrete and continuous distributions. In that case, its parameters set is the union of the
+  parameters set of each of its atoms (the weights of the mixture are not considered as parameters).
+- each component :math:`Y_i` is continuous or discrete: e.g., it can not be a :class:`~openturns.Mixture` of
+  discrete and continuous distributions, (the random vector :math:`\vect{Y}` may have some discrete components and some continuous components), 
+- the copula of :math:`\vect{Y}` is continuous: e.g., it can not be the :class:`~openturns.MinCopula`.
+
+If  :math:`\vect{Y}` and :math:`\vect{X}` are continuous random vector, then the posterior PDF of :math:`\vect{Y}` is defined by:
 
 .. math::
+    :label: postPDF
 
-    f_{\vect{Y}|\vect{X}_1=\vect{x}_1, ..., \vect{X}_n = \vect{x}_n}(\vect{y}) = \frac{f_{\vect{Y}}(\vect{y})\prod_{i=1}^n f_{\vect{X}|\vect{\Theta}=\vect{y}}(\vect{x}_i)}{\int f_{\vect{Y}}(\vect{y}')\prod_{i=1}^n f_{\vect{X}|\vect{\Theta}=\vect{y}'}(\vect{x}_i) d \vect{y}'}
+    f_{\vect{Y}|\inputRV_1 = \vect{x}_1, \dots, \inputRV_\sampleSize =  \vect{x}_\sampleSize}(\vect{y}) = \frac{f_{\vect{Y}}(\vect{y})
+    \prod_{i=1}^\sampleSize f_{\inputRV|\vect{\theta} = g(\vect{y})}(\vect{x}_i)}{\int f_{\vect{Y}}(\vect{y})\prod_{i=1}^\sampleSize
+    f_{\inputRV|\vect{\theta} = g(\vect{y})}(\vect{x}_i) d \vect{y}}
 
-with :math:`f_{\vect{X}|\vect{\Theta}}` the PDF of the conditioned distribution,
-:math:`f_{\vect{Y}}` the PDF of the conditioning distribution, i.e. the marginal distribution of :math:`\vect{Y}`,
-:math:`\vect{x}_i` the observations of the deconditioned distribution.
+with :math:`f_{\inputRV|\vect{\theta} = g(\vect{y})}` the PDF of the distribution of :math:`\inputRV|\vect{\Theta}`
+where :math:`\vect{\Theta}` has been replaced by :math:`g(\vect{y})` and :math:`f_{\vect{Y}}` the PDF of the prior distribution
+of  :math:`\vect{Y}`.
+
+Note that the denominator  of :eq:`postPDF` is the PDF of the deconditioned distribution of :math:`\inputRV|\vect{\Theta}=g(\vect{Y})` with respect to the prior distribution of :math:`\vect{Y}`.
+
+In the other cases, the PDF is the probability distribution function for the discrete components and the :math:`\int` are replaced by some
+:math:`\sum`.
+
 
 Examples
 --------
@@ -164,3 +192,41 @@ linkFunction : :class:`~openturns.Function`
     the function :math:`g: \Rset^p \rightarrow \Rset^q`, where :math:`p` is the dimension of
     *conditioningDist* and :math:`q` is the dimension of :math:`\vect{\Theta}`.
 "
+
+// ---------------------------------------------------------------------
+
+%feature("docstring") OT::PosteriorDistribution::computeLogNormalizedLikelihood
+"Compute the log-likelihood including the normalization constant.
+
+Parameters
+----------
+x : sequence of float, 2-d sequence of float
+    Point in :math:`\Rset^\inputDim`.
+
+Returns
+-------
+value : float
+    The value of the log-likelihood at *x*.
+
+Notes
+-----
+The normalized log-likelihood is the log-PDF of the posterior distribution defined in :eq:`postPDF`."
+
+// ---------------------------------------------------------------------
+
+%feature("docstring") OT::PosteriorDistribution::computeNormalizedLikelihood
+"Compute the likelihood including the normalization constant.
+
+Parameters
+----------
+x : sequence of float, 2-d sequence of float
+    Point in :math:`\Rset^\inputDim`.
+
+Returns
+-------
+value : float
+    The value of the likelihood at *x*.
+
+Notes
+-----
+The normalized likelihood is the PDF of the posterior distribution defined in :eq:`postPDF`."
