--- a/python/src/JointByConditioningDistribution_doc.i.in
+++ b/python/src/JointByConditioningDistribution_doc.i.in
@@ -25,9 +25,9 @@ Its probability density function is defined as:
 
 .. math::
 
-    f_{(\vect{Y}, \vect{X})}(\vect{y}, \vect{x}) = f_{\vect{X}|\vect{\Theta}=g(\vect{y})}(\vect{x}|g(\vect{y})) f_{\vect{Y}}( \vect{y})
+    f_{(\vect{Y}, \vect{X})}(\vect{y}, \vect{x}) = f_{\vect{X}|\vect{\theta}=g(\vect{y})}(\vect{x}|g(\vect{y})) f_{\vect{Y}}( \vect{y})
 
-with :math:`f_{\vect{X}|\vect{\Theta}=g(\vect{y})}` the PDF of the distribution of :math:`\vect{X}|\vect{\Theta}`,
+with :math:`f_{\vect{X}|\vect{\theta}=g(\vect{y})}` the PDF of the distribution of :math:`\vect{X}|\vect{\Theta}` 
 where :math:`\vect{\Theta}` has been replaced by :math:`g(\vect{y})`,
 :math:`f_{\vect{Y}}` the PDF of :math:`\vect{Y}` and :math:`g` the linking function.
 
@@ -43,11 +43,11 @@ Create a distribution:
 >>> conditioningDist = ot.Normal(0.0, 1.0)
 >>> g = ot.SymbolicFunction(['y'], ['y', '0.1+y^2'])
 >>> conditionedDist = ot.Normal()
->>> finalDist = ot.DeconditionedDistribution(conditionedDist, conditioningDist, g)
+>>> jointDist = ot.JointByConditioningDistribution(conditionedDist, conditioningDist, g)
 
 Draw a sample:
 
->>> sample = finalDist.getSample(5)
+>>> sample = jointDist.getSample(5)
 "
 
 // ---------------------------------------------------------------------
