--- a/python/src/Chi_doc.i.in
+++ b/python/src/Chi_doc.i.in
@@ -1,15 +1,6 @@
 %feature("docstring") OT::Chi
 ":math:`\chi` distribution.
 
-Parameters
-----------
-nu : float, :math:`\nu > 0`
-    Degrees of freedom.
-    
-    Default value is 1.0.
-
-Notes
------
 Its probability density function is defined as:
 
 .. math::
@@ -29,6 +20,13 @@ Its first moments are:
                                         {\Gamma(\nu / 2)} \\
         \Var{X} & = & \nu - \mu^2
     \end{eqnarray*}
+
+Parameters
+----------
+nu : float, :math:`\nu > 0`, optional
+    Degrees of freedom.
+
+    Default value is 1.0.
 
 Examples
 --------
