--- a/python/src/Gumbel_doc.i.in
+++ b/python/src/Gumbel_doc.i.in
@@ -1,19 +1,6 @@
 %feature("docstring") OT::Gumbel
 "Gumbel distribution.
 
-Parameters
-----------
-beta : float
-    scale parameter :math:`\beta > 0`.
-    
-    Default value is 1.0.
-gamma : float
-    position parameter :math:`\gamma`.
-    
-    Default value is 0.0.
-
-Notes
------
 Its cumulative distribution function and its probability density function are defined as:
 
 .. math::
@@ -38,10 +25,25 @@ Its first moments are:
 
 where :math:`\gamma_e` is the Euler-Mascheroni constant.
 
+Parameters
+----------
+beta : float
+    scale parameter :math:`\beta > 0`.
+    
+    Default value is 1.0.
+gamma : float
+    position parameter :math:`\gamma`.
+    
+    Default value is 0.0.
 
-It is possible to create a Gumbel distribution from the alternative parametrizations :math:`(\mu, \sigma)`: see  :class:`~openturns.GumbelMuSigma` or :math:`(\lambda,\gamma)`: see  :class:`~openturns.GumbelLambdaGamma`. In that case, all the results are presented in that new parametrization.
+Notes
+-----
+It is possible to create a Gumbel distribution from the alternative parametrizations :math:`(\mu, \sigma)`:
+see :class:`~openturns.GumbelMuSigma` or :math:`(\lambda,\gamma)`: see  :class:`~openturns.GumbelLambdaGamma`.
+In that case, all the results are presented in that new parametrization.
 
-In order to use the alternative  parametrization only to create the distribution, see the example below: all the results will be presented in the native parametrization :math:`(\beta, \gamma)`.
+In order to use the alternative parametrization only to create the distribution, see the example below:
+all the results will be presented in the native parametrization :math:`(\beta, \gamma)`.
 
 Examples
 --------
