In doc, refer to GPR theory from GLM & GaussianProcessFitter
Making the link between API and theory pages
Fixing typos in GaussianProcessFitter docstrings

Fix #2848, #2914

--- a/python/src/GeneralLinearModelAlgorithm_doc.i.in
+++ b/python/src/GeneralLinearModelAlgorithm_doc.i.in
@@ -1,6 +1,8 @@
 %feature("docstring") OT::GeneralLinearModelAlgorithm
 "Algorithm for the evaluation of general linear models.
 
+Refer to :ref:`gaussian_process_regression`.
+
 Available constructors:
     GeneralLinearModelAlgorithm(*inputSample, outputSample, covarianceModel, keepCovariance=True*)
 
