--- a/python/src/GaussianProcessFitter_doc.i.in
+++ b/python/src/GaussianProcessFitter_doc.i.in
@@ -1,6 +1,8 @@
 %feature("docstring") OT::GaussianProcessFitter
 "Fit gaussian process models
 
+Refer to :ref:`gaussian_process_regression`.
+
 .. warning::
     This class is experimental and likely to be modified in future releases.
     To use it, import the ``openturns.experimental`` submodule.
@@ -20,9 +22,13 @@ basis : :class:`~openturns.Basis`
 
 Notes
 -----
-We suppose we have a sample :math:`(\vect{x}_k, \vect{y}_k)_{1 \leq k \leq \sampleSize}` where :math:`\vect{y}_k = \cM(\vect{x}_k)` for all :math:`k`, with :math:`\model:\Rset^\inputDim \mapsto \Rset^{\outputDim}` a given function.
-
-The objective is to build a metamodel :math:`\metaModel`, using a **Gaussian process**: the sample :math:`(\vect{y}_k)_{1 \leq k \leq \sampleSize}` is considered as the restriction of a Gaussian process :math:`\vect{Y}(\omega, \vect{x})` on :math:`(\vect{x}_k)_{1 \leq k \leq \sampleSize}`. The Gaussian process :math:`\vect{Y}(\omega, \vect{x})` is defined by:
+We suppose we have a sample :math:`(\vect{x}_k, \vect{y}_k)_{1 \leq k \leq \sampleSize}` where
+:math:`\sampleSize \in \Nset` is the sample size, :math:`\vect{y}_k = \model(\vect{x}_k)` for all :math:`k \in \{1, ..., \sampleSize\}`
+and :math:`\model:\Rset^\inputDim \mapsto \Rset^\outputDim` is the model.
+The objective is to build a surrogate model :math:`\metaModel`, using a **Gaussian Process**: the sample
+:math:`(\vect{y}_k)_{1 \leq k \leq \sampleSize}` is considered as the restriction of a Gaussian process
+:math:`\vect{Y}(\omega, \vect{x})` on :math:`(\vect{x}_k)_{1 \leq k \leq \sampleSize}`.
+The Gaussian process :math:`\vect{Y}(\omega, \vect{x})` is defined by:
 
 .. math::
 
@@ -36,13 +42,17 @@ where:
       \begin{array}{l}
         \mu_1(\vect{x}) \\
         \vdots  \\
-        \mu_d(\vect{x})
+        \mu_\outputDim(\vect{x})
        \end{array}
      \right)
 
-with :math:`\mu_\ell(\vect{x}) = \sum_{j=1}^{n_\ell} \beta_j^\ell \varphi_j^\ell(\vect{x})` and :math:`\varphi_j^\ell: \Rset^n \rightarrow \Rset` the trend functions.
-
-Let :math:`\vect{W}` be a Gaussian process of dimension :math:`\outputDim` with zero mean and covariance function :math:`C = C(\vect{\theta}, \vect{\sigma}, \mat{R}, \vect{\lambda})` (see :class:`~openturns.CovarianceModel` for the notations).
+with :math:`\mu_\ell(\vect{x}) = \sum_{j=1}^{n_\ell} \beta_j^\ell \varphi_j^\ell(\vect{x})`
+for any :math:`\ell \in \{1, ..., \outputDim\}`,
+where :math:`n_\ell \in \Nset` is the number trend functions of the :math:`\ell`-th output component, and
+:math:`\varphi_j^\ell: \Rset^\inputDim \rightarrow \Rset` the trend functions.
+The Gaussian process :math:`\vect{W}` is of dimension :math:`\outputDim` with zero mean and covariance function
+:math:`C = C(\vect{\theta}, \vect{\sigma}, \mat{R}, \vect{\lambda})` (see :ref:`process_definitions`
+for the notations).
 
 We note:
 
@@ -60,17 +70,20 @@ We note:
       \begin{array}{l}
          \vect{\beta}^1\\
          \vdots  \\
-         \vect{\beta}^{\inputDim}
+         \vect{\beta}^\outputDim
        \end{array}
-     \right)\in \Rset^{\sum_{\ell=1}^{\outputDim} n_\ell}
+     \right)\in \Rset^{n_t}
 
+where :math:`n_t = \sum_{\ell = 1}^p n_\ell` is the total number of trend functions for all
+output dimensions.
 
-The *GaussianProcessFitter* class estimates the coefficients :math:`\beta_j^\ell` and :math:`\vect{p}` 
-where :math:`\vect{p}` is the vector of parameters of the covariance model (a subset of
-:math:`\vect{\theta}, \vect{\sigma}, \mat{R}, \vect{\lambda}`) that has been declared as
+The *GaussianProcessFitter* class estimates the coefficients
+:math:`(\beta_j^\ell)_{j=1, ..., n_\ell, \; \ell=1, ..., \outputDim}` and :math:`\vect{p}`
+where :math:`\vect{p}` is the vector of parameters of the covariance model, i.e. a subset of
+:math:`\vect{\theta}, \vect{\sigma}, \mat{R}, \vect{\lambda}`, that has been declared as
 *active* (by default, the full vectors :math:`\vect{\theta}` and :math:`\vect{\sigma}`).
 
-The estimation is done by maximizing the *reduced* log-likelihood of the model (see its expression below).
+The estimation is done by maximizing the *reduced* log-likelihood of the model (see the equation :eq:`logLikelihoodGP` below).
 
 **Estimation of the parameters** :math:`\beta_j^\ell` and :math:`\vect{p}`
 
@@ -82,73 +95,83 @@ We note:
       \begin{array}{l}
         \vect{y}_1 \\
         \vdots  \\
-        \vect{y}_{\sampleSize}
+        \vect{y}_\sampleSize
        \end{array}
-     \right) \in \Rset^{\inputDim \times \sampleSize},
+     \right) \in \Rset^{\sampleSize \outputDim},
      \quad
      \vect{m}_{\vect{\beta}} = \left(
       \begin{array}{l}
         \vect{\mu}(\vect{x}_1) \\
         \vdots  \\
-        \vect{\mu}(\vect{x}_{\sampleSize})
+        \vect{\mu}(\vect{x}_\sampleSize)
        \end{array}
-     \right) \in \Rset^{\inputDim \times \sampleSize}
+     \right) \in \Rset^{\sampleSize \outputDim}
 
- and
+and
 
 .. math::
 
     \mat{C}_{\vect{p}} = \left(
       \begin{array}{lcl}
-        \mat{C}_{11} & \dots &  \mat{C}_{1 \times \sampleSize}\\
-        \vdots &   & \vdots \\
-        \mat{C}_{\sampleSize \times 1} & \dots &  \mat{C}_{\sampleSize \times \sampleSize}
+        \mat{C}_{11} & \dots &  \mat{C}_{1 \sampleSize}\\
+        \vdots       &       & \vdots \\
+        \mat{C}_{\sampleSize1} & \dots &  \mat{C}_{\sampleSize\sampleSize}
        \end{array}
-     \right) \in \cS_{\inputDim \times \sampleSize}^+(\Rset)
+     \right) \in \cS_{\sampleSize \outputDim}^+(\Rset)
 
 where :math:`\mat{C}_{ij} = C_{\vect{p}}(\vect{x}_i, \vect{x}_j)`.
-
 The model likelihood writes:
 
 .. math::
 
-    \cL(\vect{\beta}, \vect{p};(\vect{x}_k, \vect{y}_k)_{1 \leq k \leq \sampleSize}) = \dfrac{1}{(2\pi)^{\inputDim \times \sampleSize/2} |\det \mat{C}_{\vect{p}}|^{1/2}} \exp\left[ -\dfrac{1}{2}\Tr{\left( \vect{y}-\vect{m} \right)} \mat{C}_{\vect{p}}^{-1}  \left( \vect{y}-\vect{m} \right)  \right]
+    \cL(\vect{\beta}, \vect{p};(\vect{x}_k, \vect{y}_k)_{1 \leq k \leq \sampleSize}) 
+    = \dfrac{1}{(2\pi)^{\frac{1}{2} \sampleSize \outputDim} \left|\det\left(\mat{C}_{\vect{p}}\right)\right|^{\frac{1}{2}}}
+    \exp\left( -\dfrac{1}{2}\Tr{\left( \vect{y}-\vect{m} \right)} \mat{C}_{\vect{p}}^{-1}  \left( \vect{y}-\vect{m} \right)  \right)
 
-Let :math:`\mat{L}_{\vect{p}}` ve the Cholesky factor of :math:`\mat{C}_{\vect{p}}`, i.e. the lower triangular matrix with positive diagonal such that :math:`\mat{L}_{\vect{p}} \,\Tr{\mat{L}_{\vect{p}}} = \mat{C}_{\vect{p}}`.
-Therefore:
+Let :math:`\mat{L}_{\vect{p}}` be the Cholesky factor of :math:`\mat{C}_{\vect{p}}`, i.e. the lower triangular matrix
+with positive diagonal such that :math:`\mat{L}_{\vect{p}} \,\Tr{\mat{L}_{\vect{p}}} = \mat{C}_{\vect{p}}`.
+Therefore the log-likelihood is:
 
 .. math::
     :label: logLikelihoodGP
 
-    \log \cL(\vect{\beta}, \vect{p};(\vect{x}_k, \vect{y}_k)_{1 \leq k \leq \sampleSize})
-    = cste - \log \det \mat{L}_{\vect{p}} -\dfrac{1}{2}  \| \mat{L}_{\vect{p}}^{-1}(\vect{y}-\vect{m}_{\vect{\beta}}) \|^2
+    \log \cL(\vect{\beta}, \vect{p};(\vect{x}_k, \vect{y}_k)_{1 \leq k \leq \sampleSize}) 
+    = \alpha - \log \left( \det \left(\mat{L}_{\vect{p}}\right) \right)
+    -\dfrac{1}{2}  \left\| \mat{L}_{\vect{p}}^{-1}(\vect{y}-\vect{m}_{\vect{\beta}}) \right\|^2_2
 
+where :math:`\alpha \in \Rset` is a constant independent of :math:`\vect{\beta}` and :math:`\vect{p}`.
 The maximization of :eq:`logLikelihoodGP` leads to the following optimality condition for :math:`\vect{\beta}`:
 
 .. math::
 
     \vect{\beta}^*(\vect{p}^*)
-    = \argmin_{\vect{\beta}} \| \mat{L}_{\vect{p}^*}^{-1}(\vect{y} - \vect{m}_{\vect{\beta}}) \|^2_2
+    = \argmin_{\vect{\beta}} \left\| \mat{L}_{\vect{p}^*}^{-1} \left(\vect{y} - \vect{m}_{\vect{\beta}} \right) \right\|^2_2
 
-This expression of :math:`\vect{\beta}^*` as a function of :math:`\vect{p}^*` is taken as a general relation
-between :math:`\vect{\beta}` and :math:`\vect{p}` and is substituted into :eq:`logLikelihood`, leading to
-a *reduced log-likelihood* function depending solely on :math:`\vect{p}`.
+This expression of :math:`\vect{\beta}^*` as a function of :math:`\vect{p}^*` is taken as a
+general relation between :math:`\vect{\beta}` and :math:`\vect{p}` and is substituted into
+:eq:`logLikelihoodGP`, leading to a *reduced log-likelihood* function depending solely on :math:`\vect{p}`.
 
-In the particular case where :math:`d=\dim(\vect{\sigma})=1` and :math:`\sigma` is a part of :math:`\vect{p}`, then a further reduction is possible. In this case, if :math:`\vect{q}` is the vector :math:`\vect{p}` in which :math:`\sigma` has been substituted by 1, then:
+In the particular case where :math:`\outputDim = \dim(\vect{\sigma}) = 1` and :math:`\sigma` is a part of
+:math:`\vect{p}`, then a further reduction is possible. In this case, let :math:`\vect{q}` be
+the vector :math:`\vect{p}` in which :math:`\sigma` has been substituted by 1.
+Therefore:
 
 .. math::
 
-    \| \mat{L}_{\vect{p}}^{-1}(\vect{y}-\vect{m}_{\vect{\beta}}) \|^2
-    = \frac{1}{\sigma^2} \| \mat{L}_{\vect{q}}^{-1}(\vect{y}-\vect{m}_{\vect{\beta}}) \|^2_2
+    \left\| \mat{L}_{\vect{p}}^{-1}(\vect{y}-\vect{m}_{\vect{\beta}}) \right\|^2 
+    = \frac{1}{\sigma^2} \left\| \mat{L}_{\vect{q}}^{-1} \left(\vect{y} - \vect{m}_{\vect{\beta}} \right) \right\|^2_2.
 
-showing that :math:`\vect{\beta}^*` is a function of :math:`\vect{q}^*` only, and the optimality condition for :math:`\sigma` reads:
+This shows that :math:`\vect{\beta}^*` is a function of :math:`\vect{q}^*` only, and the optimality
+condition for :math:`\sigma` reads:
 
 .. math::
 
     \vect{\sigma}^*(\vect{q}^*)
-    = \dfrac{1}{\sampleSize} \| \mat{L}_{\vect{q}^*}^{-1}(\vect{y} - \vect{m}_{\vect{\beta}^*(\vect{q}^*)}) \|^2_2
+    =\dfrac{1}{\sampleSize} 
+    \left\| \mat{L}_{\vect{q}^*}^{-1} \left(\vect{y} - \vect{m}_{\vect{\beta}^*(\vect{q}^*)}\right) \right\|^2_2.
 
-which leads to a further reduction of the log-likelihood function where both :math:`\vect{\beta}` and :math:`\sigma` are replaced by their expression in terms of :math:`\vect{q}`.
+This leads to a further reduction of the log-likelihood function where both :math:`\vect{\beta}`
+and :math:`\sigma` are replaced by their expression in terms of :math:`\vect{q}`.
 
 The default optimizer is :class:`~openturns.Cobyla` and can be changed thanks to the :meth:`setOptimizationAlgorithm` method.
 User could also change the default optimization solver by setting the `GaussianProcessFitter-DefaultOptimizationAlgorithm` resource map key to one of the :class:`~openturns.NLopt` solver names.
@@ -161,6 +184,7 @@ It is also possible to proceed as follows:
 - tell the algorithm not to optimize the parameter using the :meth:`setOptimizeParameters` method
 
 The behaviour of the reduction is controlled by the following keys in :class:`~openturns.ResourceMap`:
+
 - *ResourceMap.SetAsBool('GaussianProcessFitter-UseAnalyticalAmplitudeEstimate', True)* to use the reduction associated to :math:`\sigma`. It has no effect if :math:`d>1` or if :math:`d=1` and :math:`\sigma` is not part of :math:`\vect{p}`
 - *ResourceMap.SetAsBool('GaussianProcessFitter-UnbiasedVariance', True)* allows one to use the *unbiased* estimate of :math:`\sigma` where :math:`\dfrac{1}{\sampleSize}` is replaced by :math:`\dfrac{1}{\sampleSize-\outputDim}` in the optimality condition for :math:`\sigma`.
 
@@ -235,7 +259,7 @@ outputSample : :class:`~openturns.Sample`
 Returns
 -------
 logLikelihood : :class:`~openturns.Function`
-    The log-likelihood function degined in :eq:`logLikelihood` as a function of :math:`(\vect{\theta}, \vect{\sigma})`.
+    The log-likelihood function degined in :eq:`logLikelihoodGP` as a function of :math:`(\vect{\theta}, \vect{\sigma})`.
 
 Notes
 -----
